--- a/assets/styles/styles.css
+++ b/assets/styles/styles.css
@@ -38,6 +38,7 @@ section {
 }
 section#loader{
   background-image: url('../img/bg1.png');
+  background-position: bottom left;
 }
 body[data-state="loader"]>section#loader{
   display: flex;
@@ -666,8 +667,8 @@ img.hb {
 @keyframes leave {
   0%{ transform: translateX(-15vw) translateY(7vh) scale(0.75); }
   15%{ transform: translateX(-15vw) translateY(7vh) scale(0.75); }
-  58.9%{ transform: translateX(31vw) translateY(7vh) scale(0.75); }
-  59%{ transform: translateX(0) translateY(0) scale(1); }
+  59.9%{ transform: translateX(31vw) translateY(7vh) scale(0.75); }
+  60%{ transform: translateX(0) translateY(0) scale(1); }
   100%{ transform: translateX(0) translateY(0) scale(1); }
 }
 
