--- a/assets/styles/styles.css
+++ b/assets/styles/styles.css
@@ -1,4 +1,3 @@
-
 :root {
     --color--red: #BD1622;
     --color-white: #FFFFFF;
@@ -87,6 +86,9 @@ body[data-state="ice-cream"]>section#city>div.neznaika{
 body[data-state="butterflies"]>section>.neznaika{
   background-image: url('../img/butterflies.gif');
 }
+body[data-state="watermelon"]>section>.neznaika{
+  background-image: url('../img/watermelon.gif');
+}
 body[data-state="listening"]>section>.neznaika{
   background-image: url('../img/listening.gif');
 }
@@ -108,6 +110,9 @@ body[data-state="break"]>section>.neznaika{
   animation: 6s 1 normal ease-out .5s leave;
 }
 
+body[data-state="break"] #turbosnail,body[data-state="welcome"] #turbosnail,body[data-state="loader"] #turbosnail{
+  display: none;
+}
 
 body[data-state="welcome"] div.book{
   opacity: 0;
@@ -611,7 +616,7 @@ section#city>div>div.book{
   max-height: 110dvh;
   margin-right: 3.9dvw;
   padding: 1em 1em 17em 1em;
-  background: rgba(78, 110, 67, 0.40);
+  background: rgba(35, 23, 9, 0.40);
   box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
   backdrop-filter: blur(20px);
   -webkit-backdrop-filter: blur(20px);
@@ -689,6 +694,7 @@ img.hb {
 .logo>img{
   width: 100%;
   margin-bottom: 1.07dvh;
+  filter: drop-shadow(5px 5px 5px rgb(0 0 0 / 0.7));
 }
 .logowrapper{
   position: absolute;
@@ -697,6 +703,19 @@ img.hb {
 }
 .illbeback{
   display: none;
+}
+#turbosnail{
+position: absolute;
+display: block;
+z-index: 0;
+background-image: url('../img/snail.svg');
+width: 6.82dvw;
+height: 7.41dvh;
+background-repeat: no-repeat;
+background-size: contain;
+transform: translateX(-52dvw);
+animation: 33s snailrun 2.5s infinite linear both;
+bottom: 12.48dvh;
 }
 
 @-webkit-keyframes fadein {
@@ -754,6 +773,19 @@ img.hb {
   55.29%{ transform: translateX(35vw) translateY(11dvh) scale(0.75); }
   55.30%{ transform: translateX(0) translateY(0) scale(1); }
   100%{ transform: translateX(0) translateY(0) scale(1); }
+}
+
+@keyframes snailrun {
+  0%{ transform: translateX(-52dvw) scaleX(1);}
+  50%  { transform: translateX(52dvw) scaleX(1); }
+  50.1%{ transform: translateX(52dvw) scaleX(-1);}
+  100%  { transform: translateX(-52dvw) scaleX(-1); }
+}
+@-webkit-keyframes snailrun {
+  0%{ transform: translateX(-52dvw) scaleX(1);}
+  50%  { transform: translateX(52dvw) scaleX(1); }
+  50.1%{ transform: translateX(52dvw) scaleX(-1);}
+  100%  { transform: translateX(-52dvw) scaleX(-1); }
 }
 
 @media screen and (width: 4096px) {
